# AI_Recruiter

./: .dockerignore  .env  .gitignore  .~lock.results.csv#  Dockerfile  README.md  batch_process.py  classifier.py  db.py  docker-compose.yml  ecs-task-definition.template.json  experiments.md  extractor.py  final_result.txt  gen_ai_rechecking.py  main.py  minio_storage.py  mlflow.db  ner.py  pipeline.py  pyproject.toml  results.csv  rubric.json  run_pipeline.py  schema.sql  score.py  test_db.py
.github/workflows/: deploy.yml
minio/data/.minio.sys/: format.json
tests/: conf_test.py  test_scorer.py
