[project]
name = "ai-recruiter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.83",
    "fastapi>=0.135.2",
    "gliner>=0.2.24",
    "mlflow>=3.10.1",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "uvicorn>=0.42.0",
]
